fixed bug of add to cart 2

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#f4442d</color>
-    <color name="red">#DD1212</color>
+    <color name="red">#F72400</color>
     <color name="pink">#ED2173</color>
     <color name="text_color">#222934</color>
     <color name="second_text_color">#989898</color>
