--- a/app/src/main/res/menu/dashbord_menu.xml
+++ b/app/src/main/res/menu/dashbord_menu.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+ <item android:title="@string/cart"
+     android:icon="@drawable/ic_cart"
+     android:id="@+id/dashbord_menu_cart"
+     app:showAsAction="ifRoom"
+     android:iconTint="@color/white"/>
  <item android:title="@string/settings"
      android:icon="@drawable/ic_settings"
      android:id="@+id/dashbord_menu_settings"
      app:showAsAction="ifRoom"
-
      android:iconTint="@color/white"/>
 </menu>
