--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -7,10 +7,11 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:backgroundTint="#F0F0F1"
+        android:orientation="vertical"
         tools:context=".View.activity.DetailProduct">
 
         <com.google.android.material.appbar.MaterialToolbar
@@ -18,180 +19,187 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@drawable/main_background"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-
             app:navigationIconTint="@color/white"
             app:titleTextColor="@color/white" />
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/detail_cardview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="12dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="12dp"
             android:layout_marginBottom="8dp"
+            android:layout_weight="1"
             android:backgroundTint="#FFFFFF"
             app:cardCornerRadius="15dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detail_toolbar"
-            app:layout_constraintVertical_bias="0.07999998"
-            app:strokeColor="@color/orange"
+            app:strokeColor="@color/text_color"
             app:strokeWidth=".5dp">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/detail_iv_product"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
-
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:layout_height="0dp"
+                    android:layout_weight="10" />
 
                 <TextView
                     android:id="@+id/detail_title"
                     style="@style/viewParent.headerText"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:text="@string/loading"
-                    android:textAlignment="center"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/detail_iv_product" />
+                    android:textAlignment="center" />
 
-                <ImageView
-                    android:id="@+id/imageView8"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/view2"
-                    app:srcCompat="@drawable/ic_price2" />
-
-                <TextView
-                    android:id="@+id/detail_price"
-                    style="@style/viewParent.normalText"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:text="@string/price"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView8"
-                    app:layout_constraintStart_toEndOf="@+id/imageView8"
-                    app:layout_constraintTop_toTopOf="@+id/imageView8" />
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="8dp"
+                    android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/imageView9"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintEnd_toEndOf="@+id/imageView10"
-                    app:layout_constraintStart_toStartOf="@+id/imageView10"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView10"
-                    app:srcCompat="@drawable/ic_description" />
 
-                <TextView
-                    android:id="@+id/detail_desc"
-                    style="@style/viewParent.normalText"
-                    android:layout_width="wrap_content"
+                    <ImageView
+                        android:id="@+id/imageView8"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_gravity="center_vertical"
+                        app:srcCompat="@drawable/ic_price2" />
+
+                    <TextView
+                        android:id="@+id/detail_price"
+                        style="@style/viewParent.normalText"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="8dp"
+                        android:layout_weight="1"
+                        android:text="@string/price"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/detail_price_value"
+                        style="@style/viewParent.normalText"
+                        android:layout_width="wrap_content"
+
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start|center_vertical"
+                        android:background="@drawable/background_price"
+                        android:gravity="start"
+                        android:padding="6dp"
+                        android:text="@string/loading" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/product_desc"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView9"
-                    app:layout_constraintStart_toStartOf="@+id/detail_quantity"
-                    app:layout_constraintTop_toTopOf="@+id/imageView9" />
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="8dp"
 
-                <ImageView
-                    android:id="@+id/imageView10"
-                    android:layout_width="30dp"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintEnd_toEndOf="@+id/imageView8"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="@+id/imageView8"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView8"
-                    app:srcCompat="@drawable/ic_quantity" />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/detail_quantity"
-                    style="@style/viewParent.normalText"
-                    android:layout_width="wrap_content"
+                    <ImageView
+                        android:id="@+id/imageView10"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_gravity="center_vertical"
+                        app:srcCompat="@drawable/ic_quantity" />
+
+                    <TextView
+                        android:id="@+id/detail_quantity"
+                        style="@style/viewParent.normalText"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="8dp"
+                        android:layout_weight="1"
+                        android:text="@string/product_quantity"
+                        android:textStyle="bold" />
+
+
+                    <TextView
+                        android:id="@+id/detail_quantity_value"
+                        style="@style/viewParent.normalText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="8dp"
+                        android:background="@drawable/background_price"
+                        android:padding="6dp"
+                        android:text="@string/loading" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/product_quantity"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView10"
-                    app:layout_constraintStart_toStartOf="@+id/detail_price"
-                    app:layout_constraintTop_toTopOf="@+id/imageView10" />
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="8dp"
 
-                <TextView
-                    android:id="@+id/detail_price_value"
-                    style="@style/viewParent.normalText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/white"
-                    android:text="@string/loading"
-                    app:layout_constraintBottom_toBottomOf="@+id/detail_price"
-                    app:layout_constraintStart_toStartOf="@+id/detail_quantity_value"
-                    app:layout_constraintTop_toTopOf="@+id/detail_price"
-                    app:layout_constraintVertical_bias="1.0" />
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView9"
+                        android:layout_width="25dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_height="25dp"
+                        app:srcCompat="@drawable/ic_description" />
+
+                    <TextView
+                        android:id="@+id/detail_desc"
+                        android:padding="6dp"
+                        style="@style/viewParent.normalText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:text="@string/product_desc"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
 
                 <TextView
                     android:id="@+id/detail_desc_value"
                     style="@style/viewParent.normalText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="16dp"
-                    android:backgroundTint="@color/white"
-                    android:text="@string/loading"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="@+id/detail_desc"
-                    app:layout_constraintTop_toBottomOf="@+id/detail_desc"
-                    app:layout_constraintVertical_bias="0.0" />
-
-                <TextView
-                    android:id="@+id/detail_quantity_value"
-                    style="@style/viewParent.normalText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:backgroundTint="@color/white"
-                    android:text="@string/loading"
-                    app:layout_constraintBottom_toBottomOf="@+id/detail_quantity"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toEndOf="@+id/detail_quantity"
-                    app:layout_constraintTop_toTopOf="@+id/detail_quantity"
-                    app:layout_constraintVertical_bias="0.0" />
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="8dp"
+                    android:background="@drawable/background_price"
+                    android:padding="6dp"
+                    android:text="@string/loading" />
+
 
                 <View
                     android:id="@+id/view2"
                     android:layout_width="0dp"
-                    android:layout_height="1dp"
+                    android:layout_height="0.3dp"
                     android:layout_marginTop="8dp"
-                    android:background="@color/orange"
+                    android:background="@color/text_color"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/detail_title" />
 
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
 
         </com.google.android.material.card.MaterialCardView>
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
@@ -208,28 +216,40 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-
-
                 android:background="@drawable/button_background"
+                android:gravity="start"
+                style="@style/viewParent.headerText"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginStart="12dp"
                 android:text="@string/gotocart"
                 android:textAllCaps="false"
                 app:backgroundTint="@null"
                 app:icon="@drawable/ic_exit"
+                app:iconGravity="end"
                 app:iconSize="25dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/Detail_addtocart"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginStart="12dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="8dp"
                 android:layout_weight="1"
                 android:background="@drawable/button_background"
+                android:gravity="start"
+                style="@style/viewParent.headerText"
+                android:textColor="@color/white"
+                android:textSize="16sp"
                 android:text="@string/addtocart"
                 android:textAllCaps="false"
                 app:backgroundTint="@null"
                 app:icon="@drawable/ic_add_product"
+                app:iconGravity="end"
                 app:iconSize="25dp" />
         </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </layout>
