--- a/app/src/main/res/drawable/ic_circle_icons_mail.xml
+++ b/app/src/main/res/drawable/ic_circle_icons_mail.xml
@@ -5,11 +5,11 @@
     android:viewportHeight="64">
   <path
       android:pathData="M32,32m-32,0a32,32 0,1 1,64 0a32,32 0,1 1,-64 0"
-      android:fillColor="#77B3D4"/>
+      android:fillColor="#F44336"/>
   <path
       android:pathData="M52,44c0,2.2 -1.8,4 -4,4H16c-2.2,0 -4,-1.8 -4,-4V24c0,-2.2 1.8,-4 4,-4h32c2.2,0 4,1.8 4,4V44z"
       android:strokeAlpha="0.2"
-      android:fillColor="#231F20"
+      android:fillColor="#E91E63"
       android:fillAlpha="0.2"/>
   <path
       android:pathData="M52,42c0,2.2 -1.8,4 -4,4H16c-2.2,0 -4,-1.8 -4,-4V22c0,-2.2 1.8,-4 4,-4h32c2.2,0 4,1.8 4,4V42z"
