--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -31,8 +31,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:strokeColor="@color/orange"
-            app:strokeWidth=".5dp"
+            app:strokeColor="@color/second_text_color"
+            app:strokeWidth=".3dp"
             android:focusable="true">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -40,14 +40,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <de.hdodenhof.circleimageview.CircleImageView
+                <ImageView
                     android:id="@+id/circleImageView"
-                    setImage="@{product.product_image}"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
+                    setImageNoCircleImageView="@{product.product_image}"
+                    android:layout_width="120dp"
+                    android:scaleType="centerCrop"
+                    android:layout_height="120dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
